crates/pg_syntax/tests/snapshots/postgres_regress/box@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM box_temp WHERE f1 <@ '(10,15),(30,35)';"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "box_temp"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..52
    ColumnRef@29..31
      Ident@29..31 "f1"
    Whitespace@31..32 " "
    Op@32..34 "<@"
    Whitespace@34..35 " "
    AConst@35..52
      Sconst@35..52 "'(10,15),(30,35)'"
  Ascii59@52..53 ";"

