crates/pg_syntax/tests/snapshots/postgres_regress/box@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO quad_box_tbl\nVALUES\n  (11001, NULL),\n  (11002, NULL),\n  (11003, '((-infinity,-infinity),(infinity,infinity))'),\n  (11004, '((-infinity,100),(-infinity,500))'),\n  (11005, '((-infinity,-infinity),(700,infinity))');"
---
InsertStmt@0..224
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..24
    Ident@12..24 "quad_box_tbl"
  Newline@24..25 "\n"
  SelectStmt@25..222
    Values@25..31 "VALUES"
    Newline@31..32 "\n"
    Whitespace@32..34 "  "
    Ascii40@34..35 "("
    List@35..46
      AConst@35..40
        Iconst@35..40 "11001"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..46
        NullP@42..46 "NULL"
    Ascii41@46..47 ")"
    Ascii44@47..48 ","
    Newline@48..49 "\n"
    Whitespace@49..51 "  "
    Ascii40@51..52 "("
    List@52..63
      AConst@52..57
        Iconst@52..57 "11002"
      Ascii44@57..58 ","
      Whitespace@58..59 " "
      AConst@59..63
        NullP@59..63 "NULL"
    Ascii41@63..64 ")"
    Ascii44@64..65 ","
    Newline@65..66 "\n"
    Whitespace@66..68 "  "
    Ascii40@68..69 "("
    List@69..121
      AConst@69..74
        Iconst@69..74 "11003"
      Ascii44@74..75 ","
      Whitespace@75..76 " "
      AConst@76..121
        Sconst@76..121 "'((-infinity,-infinit ..."
    Ascii41@121..122 ")"
    Ascii44@122..123 ","
    Newline@123..124 "\n"
    Whitespace@124..126 "  "
    Ascii40@126..127 "("
    List@127..169
      AConst@127..132
        Iconst@127..132 "11004"
      Ascii44@132..133 ","
      Whitespace@133..134 " "
      AConst@134..169
        Sconst@134..169 "'((-infinity,100),(-i ..."
    Ascii41@169..170 ")"
    Ascii44@170..171 ","
    Newline@171..172 "\n"
    Whitespace@172..174 "  "
    Ascii40@174..175 "("
    List@175..222
      AConst@175..180
        Iconst@175..180 "11005"
      Ascii44@180..181 ","
      Whitespace@181..182 " "
      AConst@182..222
        Sconst@182..222 "'((-infinity,-infinit ..."
  Ascii41@222..223 ")"
  Ascii59@223..224 ";"

