crates/pg_syntax/tests/snapshots/postgres_regress/box@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX quad_box_tbl_idx ON quad_box_tbl USING spgist(b);
---
IndexStmt@0..62
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..29 "quad_box_tbl_idx"
  Whitespace@29..30 " "
  On@30..32 "ON"
  Whitespace@32..33 " "
  RangeVar@33..45
    Ident@33..45 "quad_box_tbl"
  Whitespace@45..46 " "
  Using@46..51 "USING"
  Whitespace@51..52 " "
  Ident@52..58 "spgist"
  Ascii40@58..59 "("
  IndexElem@59..60
    Ident@59..60 "b"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

