crates/pg_syntax/tests/snapshots/postgres_regress/box@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO BOX_TBL (f1) VALUES ('[1, 2, 3, 4)');"
---
InsertStmt@0..49
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "BOX_TBL"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "f1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..47
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..47
      AConst@33..47
        Sconst@33..47 "'[1, 2, 3, 4)'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

